<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainActivityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainActivityTextView"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/homeworkButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/homeworkOneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeworkOneButton" />
            <Button
                android:id="@+id/homeworkTwoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeworkTwoButton" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>